tests/fixtures/invalid/max_list_set.py
# Cannot call max() with List[int], Set[int]
x = max([1, 2, 3], {1, 2, 3})
